# battleplan

./: .gitignore  CMakeLists.txt  CMakeSettings.json  conanfile.py
cmake/: set_compile_options.cmake  set_gcc_options.cmake  set_msvc_options.cmake
demo/: CMakeLists.txt
scripts/: build_linux.sh  build_windows.bat
src/: CMakeLists.txt
src/aclt/src/: main.cpp
src/battleplan/: CMakeLists.txt
src/battleplan/src/: ExitAction.cpp  ExitAction.h  main.cpp
src/dllloader/: CMakeLists.txt
src/dllloader/include/dllloader/: dllloader.h
src/dllloader/src/: dllloader.cpp  dllloaderimpl.cpp  dllloaderimpl.h
src/graphics/: CMakelists.txt
src/graphics/include/graphics/: ActionFactory.h  Graphics.h
src/graphics/src/: ActionFactory.cpp  AddAction.cpp  AddAction.h  ClearAction.cpp  ClearAction.h  ColorAction.cpp  ColorAction.h  Entity.cpp  Entity.h  ErrorStrings.h  Graphics.cpp  GraphicsImpl.cpp  GraphicsImpl.h  LoadAction.cpp  LoadAction.h  ResetAction.cpp  ResetAction.h  SizeAction.cpp  SizeAction.h
src/parser/: CMakeLists.txt
src/parser/include/parser/: commandparser.h
src/parser/src/: commandparser.cpp
